--- a/manuscripts/24-jb-dags/24-jb-swigs.tex
+++ b/manuscripts/24-jb-dags/24-jb-swigs.tex
@@ -1392,9 +1392,9 @@ would be confounded by the common cause \(Z\), hence:
 In such a scenario, it would not be feasible to consistently decompose
 the total effect of the exposure (pandemic lockdowns) on the outcome
 (psychological distress) into natural indirect and direct effects.
-Nevertheless, if all other assumptions hold, we could ascertain from
-data the controlled direct effect of pandemic lockdowns on psychological
-distress under fixed levels of trust in government.
+However, if all other assumptions were to hold, we could we might obtain
+an unbiased estimate for the controlled direct effect of pandemic
+lockdowns on psychological distress as a fixed level of goverment trust.
 
 Table~\ref{tbl-medationassumptions} \(\mathcal{G}_2\) presents the
 weaker assumptions required to identify a controlled direct effect. We
@@ -1425,13 +1425,13 @@ interpretable (\citeproc{ref-vanderweele2015}{VanderWeele 2015}).
 
 For those interested in stistical estimators for causal mediation
 analysis, I recommend visiting the CMAverse website
-(\url{https://bs1125.github.io/CMAverse/articles/overview.html},
-accessed 12 December 2023). This excellent resource provides
-comprehensive documentation, software, and practical examples, including
-sensitivity analyses. Next, we will consider more complex scenarios that
-involve feedback between treatments and confounders across multiple time
-points, settings in which traditional statistical methods also fail to
-provide valid causal inferences.
+\url{https://bs1125.github.io/CMAverse/articles/overview.html}, accessed
+12 December 2023. This excellent resource provides comprehensive
+documentation, software, and practical examples, including sensitivity
+analyses. Next, we will consider more complex scenarios that involve
+feedback between treatments and confounders across multiple time points,
+settings in which traditional statistical methods also fail to provide
+valid causal inferences.
 
 \subsection{Part 4: Time-fixed and Time-Varying Sequential Treatments
 (Treatment Strategies, Modified Treatment Policies)}\label{id-sec-4}
@@ -1460,58 +1460,54 @@ Richard McElreath considers the question of whether marriage affects
 happiness and provides a simulation to clarify how age structure
 complicates causal inferences (\citeproc{ref-mcelreath2020}{McElreath
 2020 pp. 123--144}). We expand on this example by first clearly stating
-our causal question concerning two treatment intervals and then focusing
-on the challenges of identification in this simple setting. This
-illustrates how addressing a clear causal question in settings with
-treatment-confounder feedback requires estimators familiar to most human
-scientists.
+a causal question, and second, by considering how time-varying
+confounding invalidates the use of standard estimation methods such as
+multi-level regression.
 
 Let \(A_t = 1\) denote the state of being married at time \(t\) and
 \(A_t = 0\) denote the state of not being married, where
-\(t \in \{0, 1, \tau\}\) and \(\tau\) is the end of the study. The
-outcome, Happiness, is denoted by \(Y_\tau\).
+\(t \in \{0, 1, \tau\}\) and \(\tau\) is the end of the study.
+\(Y_\tau\) denotes happiness at the end of study. For simplicity, assume
+this is concept is well defined and measured with out error.
 
 The table below reveals four treatment strategies and six causal
 contrasts that we may estimate for each treatment strategy combination.
 
 \textbf{Treatment Strategies:}
 
-\begin{longtable}[]{@{}lll@{}}
+\begin{longtable}[]{@{}ll@{}}
 \caption{Table outlines four fixed treatment regimens and six causal
 contrasts in time-series data where exposure varies. These labels apply
 only to the two time
 points.}\label{tbl-regimens-marriage}\tabularnewline
 \toprule\noalign{}
-Type & Description & Counterfactual Outcome \\
+Regime & Counterfactual Outcome \\
 \midrule\noalign{}
 \endfirsthead
 \toprule\noalign{}
-Type & Description & Counterfactual Outcome \\
+Regime & Counterfactual Outcome \\
 \midrule\noalign{}
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-Regime & Always married & \(Y(1,1)\) \\
-Regime & Never married & \(Y(0,0)\) \\
-Regime & Divorced & \(Y(1,0)\) \\
-Regime & Gets married & \(Y(0,1)\) \\
+Always married & \(Y(1,1)\) \\
+Never married & \(Y(0,0)\) \\
+Divorced & \(Y(1,0)\) \\
+Gets married & \(Y(0,1)\) \\
 \end{longtable}
 
 \textbf{Causal Contrasts:}
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.1111}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.4778}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 4\tabcolsep) * \real{0.4111}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 2\tabcolsep) * \real{0.5000}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 2\tabcolsep) * \real{0.5000}}@{}}
 \caption{Table outlines four fixed treatment regimens and six causal
 contrasts in time-series data where exposure varies. These labels apply
 only to the two time
 points.}\label{tbl-regimens-marriage-contrasts}\tabularnewline
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
-Contrast
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-Description
+Comparison
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 Counterfactual Outcome
 \end{minipage} \\
@@ -1519,9 +1515,7 @@ Counterfactual Outcome
 \endfirsthead
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
-Contrast
-\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
-Description
+Comparison
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 Counterfactual Outcome
 \end{minipage} \\
@@ -1529,12 +1523,12 @@ Counterfactual Outcome
 \endhead
 \bottomrule\noalign{}
 \endlastfoot
-Contrast & Always married vs.~Never married & \(E[Y(1,1) - Y(0,0)]\) \\
-Contrast & Always married vs.~Divorced & \(E[Y(1,1) - Y(1,0)]\) \\
-Contrast & Always married vs.~Gets married & \(E[Y(1,1) - Y(0,1)]\) \\
-Contrast & Never married vs.~Divorced & \(E[Y(0,0) - Y(1,0)]\) \\
-Contrast & Never married vs.~Gets married & \(E[Y(0,0) - Y(0,1)]\) \\
-Contrast & Divorced vs.~Gets married & \(E[Y(1,0) - Y(0,1)]\) \\
+Always married vs.~Never married & \(E[Y(1,1) - Y(0,0)]\) \\
+Always married vs.~Divorced & \(E[Y(1,1) - Y(1,0)]\) \\
+Always married vs.~Gets married & \(E[Y(1,1) - Y(0,1)]\) \\
+Never married vs.~Divorced & \(E[Y(0,0) - Y(1,0)]\) \\
+Never married vs.~Gets married & \(E[Y(0,0) - Y(0,1)]\) \\
+Divorced vs.~Gets married & \(E[Y(1,0) - Y(0,1)]\) \\
 \end{longtable}
 
 To answer our causal question, we need to:
@@ -1575,20 +1569,16 @@ subsets of possible confounding structures for a treatment regime
 conducted over two intervals. Covariates in \(L_t\) denote measured
 confounders, and \(U\) denotes unmeasured confounders. \(A_t\) denotes
 the treatment, `Marriage Status,' at time \(t\). \(Y\) denotes
-`Happiness' measured at the end of the study. We assume that
-conditioning on \(L_t\) is sufficient to block all backdoor paths for
-\(A_{t+1}\). We include indicators of `Happiness' in \(L_t\), thus
-controlling for happiness as a common cause of marriage at time \(t+1\)
-and happiness at the end of the study, \(\tau = \bar{A}_{\tau -1}\).
+`Happiness' measured at the end of the study.
 
 Consider the structure of confounding presented in
 Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_1\). To close the
 backdoor path from \(A_1\) to \(Y\), we must condition on \(L_0\). To
-close the backdoor path from \(A_3\) to \(Y\), we must likewise
-condition on \(L_2\). However, \(L_2\) is a collider of treatment
-\(A_1\) and unmeasured confounders, such that conditioning on \(L_2\)
-opens a backdoor path between \(A_1\) and \(Y\). This path is
-highlighted in red:
+close the backdoor path from \(A_2\) to \(Y\), we must condition on
+\(L_2\). However, \(L_2\) is a collider of treatment \(A_1\) and
+unmeasured confounders, such that conditioning on \(L_2\) opens a
+backdoor path between \(A_1\) and \(Y\). This path is highlighted in
+red:
 \(A_1 \associationred L_2({\mathbf{\tilde{a_1}}}) \associationred U \associationred ({\mathbf{\tilde{a_1}, \tilde{a_2}}})\).
 
 If Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_1\) faithfully
@@ -1631,13 +1621,10 @@ Richardson and Robins (\citeproc{ref-richardson2023potential}{2023})).
 The Single World Intervention Template
 Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_3\) makes it clear that
 sequential identification may be obtained. \(A_1\) is d-separated from
-\(Y\) by conditioning on \(L_0\); \(A_3\) is d-separated from \(Y\) by
-conditioning on \(L_2\). Suppose that the only confounder in \(L\) is
-happiness. By estimating the effect of \(L_2\) on \(Y\), adjusting for
-\(A_1, L_2, L_0\), we obtain valid inference for \(Y\). By adjusting for
-\(L_0\), we obtain valid inference for \(A_1\).
+\(Y\) by conditioning on \(L_0\); \(A_2\) is d-separated from \(Y\) by
+conditioning on \(L_2\).
 
-Importantly, we cannot estimate the combined effect of a treatment
+Notice that we cannot estimate the combined effect of a treatment
 strategy over \(A_1\) and \(A_2\) by employing regression, multi-level
 regression, statistical structural equation models, or propensity score
 matching. However, special estimators may be constructed (refer to
@@ -1656,24 +1643,23 @@ Treatment-Confounder
 Feedback}{Time-Varying Confounding without Treatment-Confounder Feedback}}\label{time-varying-confounding-without-treatment-confounder-feedback}
 
 Consider how we may have time-varying confounding in the absence of
-treatment-confounder feedback. Again, we are interested in contrasts for
-a two-treatment `marriage' intervention on `happiness' measured at the
-end of the study. We assume that these variables are well-defined, that
-the time intervals separating the measurements make theoretical sense,
-that `marriage' can be intervened upon, that we have specified a target
-population, and that our questions are scientifically interesting. We
-focus on whether the estimands we state can be obtained from
-observational data. Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_1\)
-presents a structure with time-varying confounding.
+treatment-confounder feedback. Suppose again that we are interested in
+computing a causal effect estimate for a two-treatment `marriage'
+intervention on `happiness'. We again assume that all variables are
+well-defined, that `marriage' can be intervened upon, that we have
+specified a target population, and that our questions are scientifically
+interesting. We focus on whether the estimands we state can be obtained
+from observational data. Table~\ref{tbl-swigtabledeveloped}
+\(\mathcal{G}_1\) presents a structure with time-varying confounding.
 
 \(U_{AL}\) denotes an over-confident personality, an unmeasured
 variable, that is causally associated with decisions to marry early and
 with wealth. We do not suppose that \(U_{AL}\) affects happiness.
-Therefore, on this assumption, investigators should make no adjustment
-for \(U_{AL}\). Note that we could imagine a more plausible confounder
--- \(U_{AA}\) (not on any graph here) -- that relates to decisions to
-marry at each time interval. Candidate confounders might be: `prefers
-not being married', `prefers marriage', `prefers stability', or `prefers
+Therefore, on this assumption, we should make no adjustment for
+\(U_{AL}\). Note that we could imagine a more plausible confounder --
+\(U_{AA}\) (not on any graph here) -- that relates to decisions to marry
+at each time interval. Candidate confounders might be: `prefers not
+being married', `prefers marriage', `prefers stability', or `prefers
 change'. The structure of the problem would remain the same if as in the
 example we are considering here. There would be time-varying confounding
 without treatment-confounder feedback. However, here, we will keep the
@@ -1695,13 +1681,13 @@ wealth---ultra-wealthy individuals are unemployed, professors with
 status get paid peanuts, etc.---nor does status block the backdoor path
 through over-confidence).
 
-In this example, then, there is no treatment-confounder feedback. We do
-not imagine that marriage affects stated wealth, but only that stated
-wealth affects marriage (perhaps because wealth is a surrogate of a
-latent cause of stated wealth and happiness). To obtain valid inference
-for the effect of \(A_2\) on \(Y\), we must adjust for \(L_2\). However,
-\(L_2\) is a collider of \(U_{AL}\) and \(U_{AY}\). Adjusting for
-\(L_2\) opens the path:
+Notice that in this example there is no treatment-confounder feedback.
+We do not imagine that marriage affects stated wealth, but only that
+stated wealth affects marriage (perhaps because wealth is a surrogate of
+a latent cause of stated wealth and happiness). To obtain valid causal
+inference for the effect of \(A_2\) on \(Y\), we must adjust for
+\(L_2\). However, \(L_2\) is a collider of \(U_{AL}\) and \(U_{AY}\). In
+this setting, adjusting for \(L_2\) opens the path:
 
 \[
 A_1 \associationred U_{AL} \associationred L_2({\mathbf{\tilde{a_1}}})  \associationred U_{AY} \associationred Y({\mathbf{\tilde{a_1}, \tilde{a_2}}})
@@ -1734,9 +1720,9 @@ In a dynamic treatment strategy, or `modified treatment policy,' the
 value at which a treatment is fixed is a function of measured events
 leading up to it.
 
-Suppose investigators were interested in the population average effect
-of divorce on happiness if divorce was only permitted for those with
-high social status.
+Suppose we were interested in the population average effect of divorce
+on happiness if divorce was only permitted for those with high social
+status.
 
 This question is easy to ask but deceptively difficult to answer. For
 example, we cannot fit an interaction of time \(\times\) social status
@@ -1745,15 +1731,15 @@ status. Yet even if marriage did not affect social status, as in
 Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_4\), regression would
 not produce valid estimates for the counterfactual question we asked.
 
-To sharpen focus, imagine that investigators obtained indicators of
-social status at baseline.
+To sharpen focus, imagine that we obtained indicators of social status
+at baseline.
 
-Suppose the investigators state the following fixed treatment strategy:
+Suppose we wamt to consider the following fixed treatment strategy:
 
-\(g_1(\cdot)\): remain married for at least two additional years:
+\(g^\phi(\cdot)\): remain married for at least two additional years:
 
 \[
-A_t^{+}(\mathbf{g}) = \mathbf{g}(A_{t}) = \begin{cases} 
+A_t^{+}(\mathbf{g^\phi}) = \mathbf{g^\phi}(A_{t}) = \begin{cases} 
    a_{1} = 1 & \\ 
    a_{2} = 1 &   
 \end{cases}
@@ -1763,32 +1749,46 @@ This regime is identified. The setting is identical to
 Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_3\) however with no
 unmeasured variables and no arrow from \(A_1\) to \(L_2\).
 
-However, every causal contrast requires a second counterfactual
+However, every causal contrast requires a comparison of at least two
 intervention.
 
-\(g_2(\cdot)\): at each measurement interval, divorce only if one's
-social status is at least 50\% greater than average and the individual
-would have divorced in the absence of intervention; otherwise, enforce
-marriage:
+We next consider the treatment policy \(g^\lambda(\cdot)\): at each
+measurement interval, divorce only if one's social status is at least
+50\% greater than average and the individual would have divorced in the
+absence of intervention; otherwise, enforce marriage:
 
 \[
-A_t^{+}(\mathbf{g}) = \mathbf{g}(A_{t}) = \begin{cases} 
+A_t^{+}(\mathbf{g^\lambda}) = \mathbf{g^\lambda}(A_{t}) = \begin{cases} 
    a_{1} = 0 & \text{if income} > 1.5 \times  \mu_{\text{income}} \& A_1 = 0 \\ 
    a_{2} = 0 & \text{if income} > 1.5 \times  \mu_{\text{income}} \& A_2 = 0 \\ 
    a_{t}(\mathbf{g}) = 1 & \text{otherwise} 
 \end{cases}
 \]
 
-Notice that in this estimand, treatment is computed as a function of
-income at both the natural value of \(A_t\) and the social status
-\(L_t\), for \(t = \{1,2\}\).
+Notice that for the treatment policy \(\mathbf{g}^\lambda(\cdot)\),
+treatment is computed as a function of income at both the natural value
+of \(A_t\) and the social status \(L_t\), for \(t = \{1,2\}\).
 
-Template Table~\ref{tbl-swigtabledeveloped} \(\mathcal{G}_5\) presents
+Template Table~\ref{tbl-swigtabledeveloped} (\mathcal{G}\_5) presents
 the confounding structure. To convey the dependence of the fixed node on
 covariate history under treatment, we use Richardson and Robins
-(\citeproc{ref-richardson2013}{2013a})'s conventions and draw a dashed
-line to convey new paths specified by the treatment regime:
-\(\rightarrowdottedgreen\).
+(\citeproc{ref-richardson2013}{2013a})`s conventions and draw a dashed
+line ((\rightarrowdottedgreen)) to indicate paths from the variables on
+which the time-varying treatment regime depends to the deterministic
+portion of the intervention node. This strategy clarifies that setting
+the treatment level requires information about prior variables,
+including the 'natural value of the treatment' in the absence of any
+intervention (\citeproc{ref-young2014identification}{Young \emph{et al.}
+2014}).
+
+The reason for noting these dependencies on a Single World Intervention
+Graph (SWIG) is that such dependencies impose stronger identification
+conditions. At every time \(t\), \(A_t\) must be conditionally
+independent not only of the potential outcome at the end of the study
+but also of any future variable that might lead to a non-causal
+association between future treatments and the potential outcome at the
+end of the study. We clarify this additional requirement for
+\emph{strong sequential exchangeability} in the next section.
 
 \paragraph{Identification of Dynamic Time-Varying Treatment Strategies
 using an Extension of Robin's Dynamic
@@ -1796,7 +1796,7 @@ G-formula}\label{identification-of-dynamic-time-varying-treatment-strategies-usi
 
 \hyperref[id-app-c]{Appendix C} describes Richardson and Robins
 extension of Robins (\citeproc{ref-robins1986}{1986}) dynamic g-formula.
-Essentially, the algorithm is:
+Essentially, the algorithm can be stated as follows.
 
 First, identify all the variables that influence the outcome
 \(Y(\mathbf{g})\), excluding those that are current or past treatment
